...
              appBar: customAppbar(
                onBack: () => Navigator.pop(context),
                actions: [
                  Padding(
                    padding: const EdgeInsets.only(right: 12.0),
                    child: InkWell(
                      key: const Key("btn-save-interests"),
                      onTap: () {
                        final form = FormUserEntity(
                          name: state.name!,
                          birthday: state.birthday!,
                          height: state.height!,
                          weight: state.weight!,
...
                            }).toList(),
                            ConstrainedBox(
                              constraints: BoxConstraints(
                                maxWidth: MediaQuery.of(context).size.width * .3
                              ),
                              child: TextFormField(
                                key: const Key("tf-interest"),
                                focusNode: focusNode,
                                controller: textController,
                                decoration: const InputDecoration(
                                  fillColor: Colors.transparent,
                                  isDense: true,
                                  contentPadding: EdgeInsets.fromLTRB(0, 12, 0, 6)
...
