...
                      fontWeight: FontWeight.w700
                    ),
                  ),
                  Visibility(
                    visible: _isExpanded,
                    replacement: EditButton(
                      key: const Key("btn-edit-about"),
                      onTap: () {
                        _controller.forward();
                        setState(() {
                          _isExpanded = true;
                        });
                      },
                    ),
                    child: InkWell(
                      key: const Key("btn-save-about"),
                      onTap: () => handleSubmit(context, state),
                      child: const Padding(
                        padding: EdgeInsets.all(10.0),
                        child: GradientText(
                          text: Text(
                            "Save & Update",
...
